example/log/test.access
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:51][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:52][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:53][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:51][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:52][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:53][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:51][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:52][main] 
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:53][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:01:29 [17171:5840d6f9abce3bf9][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:51][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:52][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:56][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:51][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:52][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:56][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:51][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:52][main] 
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:54][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:55][main] vlog0
INFO: 2015-10-26 16:02:09 [17758:ea49166b3dcbe37b][main.cpp:56][main] vlog0
